# noir-react-native-starter

./: .gitignore  App.tsx  Dockerfile  LICENSE  README.md  app.json  package-lock.json  package.json  tamagui.config.ts
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/noir_java/: Cargo.toml  Cross.toml  Nargo.toml  set-env.sh
android/app/src/main/noir_java/src/: lib.rs  main.nr
circuit/: Nargo.toml  Prover.toml  Verifier.toml
circuit/src/: main.nr
circuits/pedersen/: Nargo.toml  Prover.toml
circuits/pedersen/src/: main.nr
circuits/product/: Nargo.toml
circuits/secp256r1/: Nargo.toml  Prover.toml
circuits/secp256r1/src/: main.nr
components/: Button.tsx  Input.tsx
ios/: EnclaveModule.m  EnclaveModule.swift  NoirModule.m  NoirModule.swift  NoirReactNative-Bridging-Header.h  Podfile  circuit.json
ios/NoirReactNative/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/NoirReactNative.xcodeproj/: project.pbxproj
ios/NoirReactNative.xcodeproj/xcshareddata/xcschemes/: NoirReactNative.xcscheme
ios/NoirReactNative.xcworkspace/: contents.xcworkspacedata
ios/NoirReactNative.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/NoirReactNativeTests/: NoirReactNativeTests.m
layouts/: MainLayout.tsx
lib/: index.ts  noir.ts  secure-enclave.ts
pages/: home.tsx  pedersen-proof.tsx  product-proof.tsx  secp256r1-proof.tsx  simple-proof.tsx
scripts/: clean-android.sh  download-srs.sh
scripts/srs_downloader/: Cargo.toml
scripts/srs_downloader/src/: main.rs
types/: index.d.ts
(+12 files in other folders)
