[package]
name = "noir_java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noir_java"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
noir_rs = { git = "https://github.com/madztheo/noir_rs.git", branch = "v0.30.0", package = "noir_rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
android_log = "0.1.3"
log = "0.3"